# MetaMAVS_MVP

./: .gitignore  AGENTS.md  CLAUDE.md  GUIDE_LINE.md  GUIDE_LINE_EN.md  PHASE3_DESIGN.md  README-baoliu.md  README.md  fasta_run.md  pyproject.toml
.claude/: settings.local.json
configs/: example_config.yaml  example_hpc_config.yaml  sapelo2_config.yaml
data/: example_manifest.csv
metamavs/: __init__.py  cli.py  config.py  controls.py  graph.py  routing.py  schemas.py  state.py
metamavs/agents/: __init__.py  abundance_agent.py  error_handler.py  final_summary.py  host_removal_agent.py  human_review.py  input_manager.py  llm_interpretation_agent.py  novel_virus_agent.py  qc_agent.py  remote_execution_agent.py  report_writer_agent.py  result_sync_agent.py  risk_assessment_agent.py  taxonomy_agent.py  tool_output_parser_agent.py  viral_detection_agent.py
metamavs/llm/: __init__.py  client.py  prompts.py
metamavs/parsers/: __init__.py  base.py  checkv.py  diamond.py  fastqc.py  host_removal.py  kraken2.py
metamavs/remote/: __init__.py  backends.py  job_ledger.py  jobgen.py  slurm.py  types.py
metamavs/utils/: __init__.py  command_runner.py  execution.py  file_utils.py  logging_utils.py  report_utils.py  taxonomy_utils.py
metamavs/workflows/: __init__.py  local_workflow.py  slurm_workflow.py
tests/: test_config.py  test_controls.py  test_graph.py  test_human_review.py  test_llm.py  test_llm_overrides.py  test_manifest_validation.py  test_parsers.py  test_remote_backends.py  test_remote_graph.py  test_routing.py  test_slurm.py  test_state.py
(+17 files in other folders)
