[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metamavs"
version = "0.1.0"
description = "MetaMAVS: Metagenomic Multi-Agent Virus Surveillance System (LangGraph-based)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MetaMAVS contributors" }]
keywords = ["metagenomics", "virus", "surveillance", "wastewater", "langgraph", "bioinformatics"]

dependencies = [
    "langgraph>=0.2",
    "pydantic>=2.5",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "typer>=0.9",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = ["pytest>=7.4", "rich>=13.0"]

[project.scripts]
metamavs = "metamavs.cli:app"

[tool.setuptools.packages.find]
include = ["metamavs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
